fix(bc1): outbox fix
